# chip8-emulator

./: Cargo.toml  Readme.md  TODO.MD
src/: app.rs  main.rs
